--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/jest": "^29.5.14",
     "eslint": "^9.13.0",
     "globals": "^15.11.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
   }
