--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lpts",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "main": "build/index.js",
   "scripts": {
     "build": "tsc",
@@ -20,5 +20,8 @@
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.27.9"
   }
 }
