--- a/.github/workflows/update-pr-description.yml
+++ b/.github/workflows/update-pr-description.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Fetch all branches
 
       - name: Install Changesets CLI
         run: npm install @changesets/cli
