--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "highs-ts",
   "version": "0.1.0",
-  "main": "build/index.js",
+  "main": "build/src/index.js",
+  "types": "build/src/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.json",
     "test": "jest",
-    "lint": "eslint"
+    "lint": "eslint",
+    "clean": "rimraf build"
   },
   "keywords": [],
   "author": "",
@@ -17,11 +19,13 @@
     "eslint": "^9.13.0",
     "globals": "^15.11.0",
     "jest": "^29.7.0",
+    "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
   },
   "dependencies": {
-    "@changesets/cli": "^2.27.9"
+    "@changesets/cli": "^2.27.9",
+    "highs": "^1.0.1"
   }
 }
