--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -9,8 +9,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "typeRoots": ["types", "node_modules/@types"],
+    "typeRoots": ["types", "node_modules/@types"]
   },
-  "include": ["src/**/*.ts" ],
-  "exclude": ["test/**/*.ts", "src/**/*.spec.ts"]
+  "include": ["src/**/*.ts", "test/**/*.ts"]
 }
