Fix issue with the module name

--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -8,8 +8,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true,
-    "typeRoots": ["types", "node_modules/@types"]
+    "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "test/**/*.ts"]
+  "include": ["src/**/*.ts", "test/**/*.ts", "types/highs-overrides.d.ts"]
 }
