--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true,
-    "typeRoots": ["types", "node_modules/@types"],
+    "skipLibCheck": true
   },
-  "include": ["src/**/*.ts" ],
+  "include": ["src/**/*.ts", "types/highs-overrides.d.ts"],
   "exclude": ["test/**/*.ts", "src/**/*.spec.ts"]
 }
