--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -10,5 +10,5 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "test/**/*.ts", "types/highs-overrides.d.ts"]
+  "include": ["src/**/*.ts", "test/**/*.ts"]
 }
