--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "types/highs-overrides.d.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["test/**/*.ts", "src/**/*.spec.ts"]
 }
