--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -10,6 +10,5 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["test/**/*.ts", "src/**/*.spec.ts"]
+  "include": ["src/**/*.ts", "test/**/*.ts"]
 }
