--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "highs-ts",
+  "name": "highs-dx",
   "version": "0.1.0",
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
