--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "highs-dx",
   "version": "0.1.0",
+  "author": "Wilfred Springer",
+  "licenses": [
+    {
+      "type": "MIT"
+    }
+  ],
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
   "scripts": {
@@ -9,23 +15,32 @@
     "lint": "eslint",
     "clean": "rimraf build"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "highs",
+    "typescript",
+    "type safety"
+  ],
   "license": "ISC",
-  "description": "",
+  "description": "DX for Linear Programming in TypeScript with HiGHS",
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/jest": "^29.5.14",
     "eslint": "^9.13.0",
+    "eslint-plugin-header": "^3.1.1",
+    "eslint-plugin-headers": "^1.2.0",
     "globals": "^15.11.0",
     "jest": "^29.7.0",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.12.2"
+    "typescript-eslint": "^8.12.2",
+    "@changesets/cli": "^2.27.9"
   },
   "dependencies": {
-    "@changesets/cli": "^2.27.9",
     "highs": "^1.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "wspringer/highs-dx"
   }
 }
